# svton

./: .gitignore  AGENTS.md  API_CLIENT_ADAPTER_SUMMARY.md  CLAUDE.md  CLI_TEMPLATE_FIXES_COMPLETE.md  CODE_FIXES_SUMMARY.md  CODE_REVIEW_ISSUES.md  CONTRIBUTING.md  EXAMPLES_COMPLETION_REPORT.md  FEATURE_INTEGRATION_SUMMARY.md  FINAL_CODE_REVIEW.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  SVTON_NESTJS_INFRA_PLAN.md  TEMPLATE_FIXES_NEEDED.md  docker-compose.deploy-target.yml  docker-compose.devpilot-app.yml  docker-compose.devpilot-staging.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svton.config.ts  turbo.json  user-registration-flow.md
.agent-board/: board.json  board.md  events.jsonl
.changeset/: add-database-selection.md  chilly-baths-bet.md  cli-feature-integration.md  fix-all-template-errors.md  new-packages.md  thin-cows-shout.md
.codex/: hooks.json
apps/agent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent-desktop/src-tauri/capabilities/: default.json
apps/agent-desktop/src-tauri/icons/: icon.icns
apps/agent-desktop/src-tauri/src/: db.rs  lib.rs  main.rs  ws_relay.rs
apps/agent-desktop/src-tauri/src/commands/: chrome_cdp.rs  chronicle.rs  computer_use.rs  dialog.rs  fs.rs  mod.rs  path.rs  permissions.rs  preview.rs  process.rs  sandbox.rs  search.rs  storage.rs  window.rs
docs/: CODING_STANDARDS.md  CONFIG_SYSTEM_DESIGN.md  DICTIONARY_MODULE_GUIDE.md  DOC_CLEANUP_GUIDELINES.md  PERFORMANCE-OPTIMIZATION.md  README.md  SHARED-HOOKS-GUIDE.md  SMART-UPLOAD-GUIDE.md  Taro组件库最佳实践.md  UI组件库设计文档.md  index.md  package.json
(+2812 files in other folders)
