[package]
name = "svton-agent-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "svton_agent_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
window-vibrancy = "0.6"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
grep = "0.3"
grep-searcher = "0.1"
grep-regex = "0.1"
globset = "0.4"
walkdir = "2"
dirs = "5"
screenshots = "0.8"
enigo = "0.2"
base64 = "0.22"
image = "0.25"
